--- a/css/default.css
+++ b/css/default.css
@@ -7,12 +7,15 @@ body {
     color: #555E4F;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin: 0;
-        text-align: center;
-        color: black;
+    text-align: center;
+    color: black;
 }
-
 
 a {
     color: #666666;
@@ -24,19 +27,17 @@ a:hover {
     text-decoration: none;
 }
 
-input[type="text"]
-{
-  background-color: #CDBA96
+input[type="text"] {
+    background-color: #CDBA96
 }
 
-input[type="password"]
-{
-  background-color: #CDBA96
+input[type="password"] {
+    background-color: #CDBA96
 }
 
 #fulladmin {
-  width: 100%
-  height: 100%
+    width: 100%;
+    height: 100%
 }
 
 #adminleft {
@@ -53,4 +54,4 @@ input[type="password"]
     float: right;
     width: 80%;
     background-color: #CDCD96;
-}  
+}
